<resources>
    <string name="app_name" translatable="false">GitHubers</string>
    <string name="title_activity_githubers" translatable="false">GitHubers</string>

    <string name="nav_item_title_user">User data</string>
    <string name="nav_item_title_repo_list">Repo list</string>
    <string name="nav_item_title_repo">Repo</string>

    <string name="nav_item_title_users_list">Users list</string>
    <string name="nav_item_title_favorites_users">Favorites users</string>
    <string name="nav_item_title_favorites_repos">Favorites repos</string>
    <string name="nav_item_title_favorites_gists">Favorites gists</string>

    <string name="nav_header_icon_content_description">Logo icon</string>
    <string name="no_items_favorites">No items added to favorites</string>
    <string name="contentDescriptionImageItemUser">User Image</string>
    <string name="contentDescriptionSiteAdmin">User site admin</string>
    <string name="loading">Loading&#8230;</string>
    <string name="verify_conection">VERIFY YOUR CONNECTION</string>
    <string name="update">UPDATE</string>
    <string name="dismiss">DISMISS</string>
    <string name="no_data_not_loading">No data - Verify your connection</string>
    <string name="remove_favorite">Remove favorite</string>
    <string name="add_favorite">Add favorite</string>
    <string name="user_add">User added to favorite</string>
    <string name="user_location">User location:</string>
    <string name="github_link">Github link:</string>
    <string name="click_to_view_repos">(click to view repos)</string>
    <string name="repositories">Repositories:</string>
    <string name="searchable_user_hint">Enter with an user</string>
    <string name="searchable_user_label">User search</string>
    <string name="share">Share</string>
</resources>
