<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:startDestination="@+id/favorites_users_fragment">

    <!--
        Todos fragments que estão associados ao menu do DrawerLayout DEVEM ter o MESMO id
        configurado no xml de menu. Essa associação é necessária para que o Android utilize
        a navegação do DrawerLayout.

        All fragments that associated in DrawerLayout menu MUST be the same configured id on menu xml.
         This association is required for that the Android use navigation of the DrawerLayout.
    -->

    <fragment
            android:id="@+id/favorites_users_fragment"
            android:name="br.com.helpdev.githubers.ui.frags.favusers.FavoritesUsersFragment"
            android:label="@string/nav_item_title_favorites_users"
            tools:layout="@layout/fragment_favorites_users">
        <action android:id="@+id/action_favorites_users_fragment_to_user" app:destination="@id/user_fragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"
        />
        <action android:id="@+id/action_favorites_users_fragment_to_users_list"
                app:destination="@id/users_list_fragment"/>
    </fragment>

    <fragment
            android:id="@+id/favorites_repos_fragment"
            android:name="br.com.helpdev.githubers.ui.frags.favrepos.FavoritesReposFragment"
            android:label="@string/nav_item_title_favorites_repos"
            tools:layout="@layout/fragment_favorites_repos">
        <action android:id="@+id/action_favorites_repos_fragment_to_repo" app:destination="@id/repo_fragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
            android:id="@+id/users_list_fragment"
            android:name="br.com.helpdev.githubers.ui.frags.userslist.UsersListFragment"
            android:label="@string/nav_item_title_users_list"
            tools:layout="@layout/fragment_users_list">
        <action android:id="@+id/action_users_list_fragment_to_user" app:destination="@id/user_fragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>


    <fragment
            android:id="@+id/repo_list_fragment"
            android:name="br.com.helpdev.githubers.ui.frags.repolist.RepoListFragment"
            android:label="@string/nav_item_title_repo_list"
            tools:layout="@layout/fragment_users_list">
        <action android:id="@+id/action_users_list_fragment_to_repo" app:destination="@id/repo_fragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
            android:id="@+id/user_fragment"
            android:name="br.com.helpdev.githubers.ui.frags.user.UserFragment"
            android:label="@string/nav_item_title_user"
            tools:layout="@layout/fragment_user">
        <argument
                android:name="userId"
                app:argType="integer" />
        <action android:id="@+id/action_repo_user_to_repo_list" app:destination="@id/repo_list_fragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>


    <fragment
            android:id="@+id/repo_fragment"
            android:name="br.com.helpdev.githubers.ui.frags.repo.RepoFragment"
            android:label="@string/nav_item_title_repo"
            tools:layout="@layout/fragment_repo">
    </fragment>
</navigation>