<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="userViewModel"
                type="br.com.helpdev.githubers.ui.frags.user.UserViewModel"/>
        <variable
                name="onClickToRepositories"
                type="android.view.View.OnClickListener"/>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:showIn="@layout/activity_githubers"
            tools:context=".ui.GithubersActivity"
            tools:ignore="MergeRootFrame">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    tools:title="@sample/user_detail.json/user_detail/login"
                    app:toolbarId="@+id/toolbar">

                <ImageView
                        android:id="@+id/detail_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/contentDescriptionImageItemUser"
                        android:fitsSystemWindows="true"
                        app:imageFromUrl="@{userViewModel.user.user.avatar_url}"
                        android:scaleType="centerCrop"
                        tools:src="@sample/user_detail.json/user_detail/avatar_url"
                        android:src="@mipmap/ic_launcher"
                        app:layout_collapseMode="parallax"/>

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/detail_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:title="@{userViewModel.user.user.login}"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:id="@+id/plant_detail_scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/name"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        tools:text="@sample/user_detail.json/user_detail/name"
                        android:layout_height="wrap_content"
                        app:layout_constraintVertical_bias="0"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@{userViewModel.user.user.name}"
                        app:isGone="@{!userViewModel.user.user.hasName()}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"/>

                <TextView
                        android:id="@+id/bio"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="8dp"
                        app:isGone="@{!userViewModel.user.user.hasBio()}"
                        android:text="@{userViewModel.user.user.bio}"
                        tools:text="@sample/user_detail.json/user_detail/bio"
                        android:layout_height="wrap_content"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintVertical_bias="0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name"/>


                <TextView
                        android:id="@+id/infoGithub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/bio"
                        android:textStyle="bold"
                        android:text="@string/github_link"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        app:layout_constraintVertical_bias="0"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                        android:id="@+id/github"
                        android:layout_width="wrap_content"
                        android:text="@{userViewModel.user.user.html_url}"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/infoGithub"
                        app:layout_constraintTop_toTopOf="@id/infoGithub"
                        app:layout_constraintBottom_toBottomOf="@id/infoGithub"
                        android:layout_marginStart="8dp"
                        android:autoLink="web"
                        tools:text="@sample/user_detail.json/user_detail/html_url"
                />

                <TextView
                        android:id="@+id/infoLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/infoGithub"
                        android:textStyle="bold"
                        app:isGone="@{!userViewModel.user.user.hasLocation()}"
                        android:text="@string/user_location"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintVertical_bias="0"
                        app:layout_constraintHorizontal_bias="0"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                        android:id="@+id/userLocation"
                        app:isGone="@{!userViewModel.user.user.hasLocation()}"
                        android:text="@{userViewModel.user.user.location}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/infoLocation"
                        app:layout_constraintTop_toTopOf="@id/infoLocation"
                        app:layout_constraintBottom_toBottomOf="@id/infoLocation"
                        android:layout_marginStart="8dp"
                        android:autoLink="map"
                        tools:text="@sample/user_detail.json/user_detail/location"
                />

                <View
                        android:layout_width="0dp"
                        android:background="@drawable/bt_click_repo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/infoRepos"
                        android:onClickListener="@{onClickToRepositories}"
                        android:clickable="true"
                        app:isGone="@{!userViewModel.user.user.hasLoadDetails()}"
                        app:layout_constraintBottom_toBottomOf="@id/infoClickToRepo"
                        android:layout_height="0dp" android:focusable="true"/>

                <TextView
                        android:id="@+id/infoRepos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repositories"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        android:layout_marginTop="20dp"
                        app:layout_constraintEnd_toStartOf="@id/repos"
                        app:layout_constraintVertical_bias="0"
                        app:layout_constraintTop_toBottomOf="@id/infoLocation"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />

                <TextView
                        android:id="@+id/repos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:textInt="@{userViewModel.user.user.public_repos}"
                        tools:text="@sample/user_detail.json/user_detail/public_repos"
                        app:layout_constraintStart_toEndOf="@id/infoRepos"
                        app:layout_constraintTop_toTopOf="@id/infoRepos"
                        app:layout_constraintBottom_toBottomOf="@id/infoRepos"
                        android:layout_marginStart="8dp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
                <TextView
                        android:id="@+id/infoClickToRepo"
                        android:layout_width="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/infoRepos"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/click_to_view_repos"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_height="wrap_content"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <include
                tools:visibility="invisible"
                android:id="@+id/layout_network"
                layout="@layout/load_network"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                app:tint="@android:color/white"
                app:backgroundTint="@color/colorAccentDark"
                android:layout_width="wrap_content"
                app:isGone="@{userViewModel.user.isFavorite()}"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_anchor="@id/appbar"
                app:layout_anchorGravity="bottom|right|end"
                app:srcCompat="@drawable/ic_star"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>